--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,13 +11,19 @@ spring:
       ddl-auto: none
     show-sql: true
     properties:
-      hibernate.format_sql: true
+      hibernate:
+        format_sql: true
+        highlight_sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
   liquibase:
     enabled: true
     change-log: classpath:db/changelog/changelog-master.xml
 
+server:
+  port: ${PORT:8080}
+
 logging:
   level:
     liquibase: DEBUG
+    org.hibernate.orm.jdbc.bind: trace
